feat:add navbar links

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
         Day 1 git & github
     </h1>
     <p>Hello My Friends</p>
+    <nav>
+        <ul>
+            <li><a href="#section1">Home</a></li>
+            <li><a href="#section2">About</a></li>
+            <li><a href="#section3">Contact</a></li>
+        </ul>
+    </nav>
 </body>
 
 </html>
