feature:add slider cand cart

--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Day1 Git & GitHub</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
-    <h1>
-        Day 1 git & github
-    </h1>
+  <body>
+    <h1>Day 1 git & github</h1>
     <p>Hello My Friends</p>
-</body>
+    <section class="slider">
+      <div><img src="imgs/1.png" alt="" /></div>
+      <div><img src="imgs/2.png" alt="" /></div>
+      <div><img src="imgs/3.png" alt="" /></div>
+    </section>
 
+    <section>
+      <p>Welcome to the Second day of our Git & GitHub course!</p>
+      <img src="imgs/2.jpg" alt="" srcset="" />
+      <a href="#"><button>Add To Cart</button></a>
+    </section>
+  </body>
 </html>
