style:add style in nav bar branch

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         </ul>
     </nav>
     <section class="slider">
-      <div><img src="imgs/1.png" alt="" /></div>
-      <div><img src="imgs/2.png" alt="" /></div>
-      <div><img src="imgs/3.png" alt="" /></div>
+      <div><img src="imgs/1.png" alt="test" /></div>
+      <div><img src="imgs/2.png" alt="test" /></div>
+      <div><img src="imgs/3.png" alt="test" /></div>
     </section>
 
     <section>
       <p>Welcome to the Second day of our Git & GitHub course!</p>
-      <img src="imgs/2.jpg" alt="" srcset="" />
+      <img src="./imgs/2.jpg" alt="test" srcset="" />
       <a href="#"><button>Add To Cart</button></a>
     </section>
   </body>
