--- a/index.html
+++ b/index.html
@@ -28,5 +28,32 @@
       <img src="./imgs/2.jpg" alt="test" srcset="" />
       <a href="#"><button>Add To Cart</button></a>
     </section>
+
+    <section class="cards">
+      <section>
+        <div>
+              <p>Welcome to the Second day of our Git & GitHub course!</p>
+          <img src="imgs/1.png" alt="test" srcset="">
+           <a href="#"><button>Add To Cart</button></a>
+        </div>
+        <div>
+              <p>Welcome to the Second day of our Git & GitHub course!</p>
+          <img src="imgs/1.png" alt="test" srcset="">
+           <a href="#"><button>Add To Cart</button></a>
+        </div>
+        <div>
+              <p>Welcome to the Second day of our Git & GitHub course!</p>
+          <img src="imgs/1.png" alt="test" srcset="">
+           <a href="#"><button>Add To Cart</button></a>
+        </div>
+        <div>
+              <p>Welcome to the Second day of our Git & GitHub course!</p>
+          <img src="imgs/1.png" alt="test" srcset="">
+           <a href="#"><button>Add To Cart</button></a>
+        </div>
+             
+
+      </section>
+    </section>
   </body>
 </html>
