--- a/index.html
+++ b/index.html
@@ -55,5 +55,15 @@
 
       </section>
     </section>
+
+    <footer>
+      <section class="social">
+        <ul>
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">Twitter</a></li>
+          <li><a href="#">Instagram</a></li>
+        </ul>
+      </section>
+    </footer>
   </body>
 </html>
