add about structure

--- a/about.html
+++ b/about.html
@@ -17,6 +17,33 @@
     <h1>About Us</h1>
     <p>Welcome to the About Us page!</p>
 
+<section>
+    <img src="imgs/gitLens.png" alt="" srcset="">
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. A perferendis consequatur nesciunt inventore, velit vero quidem rerum adipisci expedita molestias excepturi nisi placeat accusantium deleniti incidunt ipsum similique ducimus culpa!
+    </p>
 
+</section>
+
+<section>
+    <img src="imgs/gitLens.png" alt="" sizes="" srcset="">
+    <h2>Our Mission</h2>
+    <p>To provide the best resources and support for learning Git and GitHub.</p>
+    <button>Learn More ...</button>
+
+</section>
+<section>
+    <section class="cards"><img src="imgs/gitLens.png" alt="" srcset=""></section>
+    <section class="cards"><img src="imgs/gitLens.png" alt="" srcset=""></section>
+    <section class="cards"><img src="imgs/gitLens.png" alt="" srcset=""></section>
+</section>
+<section class="contact">
+    <form action="" method="post">
+        <input type="text" placeholder="Your Name">
+        <input type="email" placeholder="Your Email">
+        <textarea placeholder="Your Message"></textarea>
+        <button type="submit">Send Message</button>
+    </form>
+</section>
 </body>
 </html>
