feature:team contact

--- a/about.html
+++ b/about.html
@@ -16,7 +16,26 @@
     </nav>
     <h1>About Us</h1>
     <p>Welcome to the About Us page!</p>
-
-
+<section>
+    <p>Lorem ipsum dolor sit amet. consectetur adipisicing elit. A perferendis consequatur nesciunt inventore, velit vero quidem rerum adipisci expedita molestias excepturi nisi placeat accusantium deleniti incidunt ipsum similique ducimus culpa!</p>
+    <ul>
+        <li><a href="#">Our Team</a></li>
+        <li><a href="#">Our Story</a></li>
+        <li><a href="#">Our Values</a></li>
+    </ul>
+    <section class="cards">
+        <img src="imgs/gitLens.png" alt="" srcset="">
+    </section>
+</section>
+<hr>
+<div>
+    <h2>Contact Us</h2>
+    <form action="" method="post">
+        <input type="text" placeholder="Your Name">
+        <input type="email" placeholder="Your Email">
+        <textarea placeholder="Your Message"></textarea>
+        <button type="submit">Send Message</button>
+    </form>
+</div>
 </body>
 </html>
