--- a/about.html
+++ b/about.html
@@ -16,6 +16,9 @@
     </nav>
     <h1>About Us</h1>
     <p>Welcome to the About Us page!</p>
+    <p>We are dedicated to providing the best resources for learning Git and GitHub.</p>
+    <a href="http://">Read More</a>
+    <a href="http://">Back</a>
 <section>
     <p>Lorem ipsum dolor sit amet. consectetur adipisicing elit. A perferendis consequatur nesciunt inventore, velit vero quidem rerum adipisci expedita molestias excepturi nisi placeat accusantium deleniti incidunt ipsum similique ducimus culpa!</p>
     <ul>
